plugins {
    id 'org.springframework.boot' version '2.6.2'
    id 'io.spring.dependency-menedgement' version '1.0'
    id 'java'
}
group = 'hogwarts.ru.school'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'



repositories {
    mavenCentral()
}
dependencies {
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springdoc:springdoc-opepani-ui:1.6.3'
    implementation 'org.postgresql:postgresql:42.5.0'
    implementation "org.springframework.boot:spring-boot-starter-data-jpa"
}

test {
    useJUnitPlatform()
}